--- a/css/style.css
+++ b/css/style.css
@@ -408,3 +408,6 @@ p a:hover {
 #footer div ul li #pinterest:hover {
 	background-position: -44px -132px;
 }
+x {
+    height: 295px;
+    width: 238px;
